--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>TestProject1</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
+    <packaging>jar</packaging>
     <name>TestProject1</name>
     <description>TestProject1</description>
     <properties>
