--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,57 @@
 
     <build>
         <plugins>
+
+            <!-- Test Coverage -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.5</version>
+                <configuration>
+                    <!--
+                    <rules>
+                      <rule>
+                        <element>BUNDLE</element>
+                        <limits>
+                          <limit>
+                            <counter>INSTRUCTION</counter>
+                            <value>COVEREDRATIO</value>
+                            <minimum>0.40</minimum>
+                          </limit>
+                        </limits>
+                      </rule>
+                      <rule>
+                        <element>METHOD</element>
+                        <limits>
+                          <limit>
+                            <counter>LINE</counter>
+                            <value>TOTALCOUNT</value>
+                            <maximum>30</maximum>
+                          </limit>
+                        </limits>
+                      </rule>
+                    </rules>
+                    -->
+                    <excludes>
+                        <exclude>**/DeleteController.class</exclude> <!-- 이 클래스는 제외하겠다는 설정 값 -->
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
