Spring Boot ShortUrlController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # sql ? ???? ??
 
+## Custom Property
+around.hub.short.url.id=ZWWiuXHbdNf0BAVwDUVp
+around.hub.short.url.secret=WxRf86BURZ
