Spring Boot ShortUrl DB_delete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,5 @@ spring.jpa.properties.hibernate.format_sql=true
 # sql ? ???? ??
 
 ## Custom Property
-around.hub.short.url.id=ZWWiuXHbdNf0BAVwDUVp
-around.hub.short.url.secret=WxRf86BURZ
+around.hub.short.url.id=1z30mRO5VGkNkgQcHS6c
+around.hub.short.url.secret=1R8Pvgdn4m
