--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,14 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/around-hub-shop
 # jdbc:mariadb://localhost:3306/?????? ?? ? ??? ??
 spring.datasource.username=root
 spring.datasource.password=sundyd8238
+
+#jasypt encryption
+#spring.datasource.username=ENC(d6knRlteGrzKEkbZXSOMsg==)
+#spring.datasource.password=ENC(U3nClZuN7lPBBEmX2NpMCl25tF1eLjfG)
+
+#for docker
+#spring.datasource.username=tjsdyd
+#spring.datasource.password=sundyd8238
 # password ??? ?? ????? ??? ???? ??? ??? mariadb ? ???? ??? ?? ??.
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
@@ -26,3 +34,6 @@ spring.jpa.properties.hibernate.format_sql=true
 ## Custom Property
 around.hub.short.url.id=1z30mRO5VGkNkgQcHS6c
 around.hub.short.url.secret=1R8Pvgdn4m
+
+## jasypt property setting password
+jasypt.encryptor.bean=jasyptStringEncryptor
