Spring Boot setting profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
+#dev.properties active
+spring.profiles.active=dev
+
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 ## Maria DB ?????? ??
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/around-hub-shop
+spring.datasource.url=jdbc:mariadb://localhost:3306/springboot
 # jdbc:mariadb://localhost:3306/?????? ?? ? ??? ??
 spring.datasource.username=root
 spring.datasource.password=sundyd8238
@@ -34,6 +37,8 @@ spring.jpa.properties.hibernate.format_sql=true
 ## Custom Property
 around.hub.short.url.id=1z30mRO5VGkNkgQcHS6c
 around.hub.short.url.secret=1R8Pvgdn4m
+#if activate 'spring.profiles.active=dev', this message is ignored
+around.hub.loading.message=## local ???? ??????? ##
 
 ## jasypt property setting password
 jasypt.encryptor.bean=jasyptStringEncryptor
