Spring Boot Cache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,7 @@ around.hub.loading.message=## local ???? ??????? ##
 
 ## jasypt property setting password
 jasypt.encryptor.bean=jasyptStringEncryptor
+
+#setting redis(port number -> docker)
+spring.redis.host=localhost
+spring.redis.port=6379
